[package]
name = "galm"
version = "0.0.16"
license = "MIT"
authors = ["awrznc"]
edition = "2018"
description = "GalM is pattern matching library."
readme = "README.md"
keywords = ["matching", "sort", "cli"]
repository = "https://github.com/awrznc/GalM"
documentation = "https://docs.rs/galm/"
exclude = ["docs/assets/image"]
