[package]
name = "galm"
version = "0.2.0"
license = "MIT"
authors = ["awrznc"]
edition = "2021"
description = "GalM is pattern matching library."
readme = "README.md"
keywords = ["matching", "sort", "cli"]
repository = "https://github.com/awrznc/GalM"
documentation = "https://docs.rs/galm/"
exclude = ["docs/assets/image"]
